#003cda → $secondary-color

--- a/_sass/_blog-post.scss
+++ b/_sass/_blog-post.scss
@@ -64,7 +64,7 @@
     }
 
     &-name {
-        color: #003cda;
+        color: $secondary-color;
         font-weight: bold;
         font-size: 22px;
         line-height: 150%;
