--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -40,7 +40,7 @@ footer {
                 }
 
                 a {
-                    color: #003cda;
+                    color: $secondary-color;
                     &:hover {
                         color: $primary-color;
                     }
