--- a/_sass/components/_tabs.scss
+++ b/_sass/components/_tabs.scss
@@ -18,7 +18,7 @@
       font-weight: 600;
       letter-spacing: 0.05em;
       text-transform: uppercase;
-      color: #003cda;
+      color: $secondary-color;
       padding: 7px 29px;
       cursor: pointer;
       outline: none;
