--- a/_sass/_blog-index.scss
+++ b/_sass/_blog-index.scss
@@ -22,7 +22,7 @@ section.first-post article {
         box-shadow: 0px 8px 16px rgba(13, 76, 211, 0.16);
         cursor: pointer;
         h2 {
-            color: #003cda;
+            color: $secondary-color;
         }
     }
     .post-image {
@@ -91,7 +91,7 @@ section.first-post article {
                 box-shadow: 0px 8px 16px rgba(13, 76, 211, 0.16);
                 cursor: pointer;
                 h4 {
-                    color: #003cda;
+                    color: $secondary-color;
                 }
             }
 
