--- a/_sass/_media-assets.scss
+++ b/_sass/_media-assets.scss
@@ -66,7 +66,7 @@
             background-color: $primary-color;
         }
         &.c003CDA {
-            background-color: #003cda;
+            background-color: $secondary-color;
         }
         &.c276BFB {
             background-color: $secondary-color-light;
