--- a/_sass/_media-assets.scss
+++ b/_sass/_media-assets.scss
@@ -75,7 +75,7 @@
             background-color: #00c0ab;
         }
         &.c33DFCC {
-            background-color: #33dfcc;
+            background-color: $tertiary-color;
         }
         &.c283049 {
             background-color: #283049;
