--- a/_sass/components/_borders.scss
+++ b/_sass/components/_borders.scss
@@ -19,7 +19,7 @@
     border-color: $primary-color;
 }
 .bt-secondary{
-    border-color: $secondary-border;
+    border-color: $secondary-color;
 }
 .bt-tertiary{
     border-color: $tertiary-border;
