--- a/_sass/components/_tooltip.scss
+++ b/_sass/components/_tooltip.scss
@@ -15,7 +15,7 @@
             &:hover {
                 cursor: pointer;
                 svg path {
-                    fill: #33dfcc;
+                    fill: $tertiary-color;
                 }
             }
         }
