--- a/_sass/_blog-post.scss
+++ b/_sass/_blog-post.scss
@@ -34,7 +34,7 @@
     margin-top: 50px;
     &:before {
         content: "";
-        border-top: 3px solid #33dfcc;
+        border-top: 3px solid $tertiary-color;
         width: 100%;
         position: absolute;
         top: 0;
