--- a/_sass/components/_modal.scss
+++ b/_sass/components/_modal.scss
@@ -38,7 +38,7 @@ body.modal-open {
             &:hover {
                 cursor: pointer;
                 svg path {
-                    fill: #33dfcc;
+                    fill: $tertiary-color;
                 }
             }
         }
