#00c0ab → $tertiary-color-light

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,7 +14,7 @@ body {
   background-color: $secondary-color-light;
 }
 .bg-tertiary {
-  background-color: $tertiary-bg;
+  background-color: $tertiary-color-light;
 }
 .bg-wave {
   background-repeat: no-repeat;
