--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,7 +1,7 @@
 footer {
     padding-top: 135px;
     padding-bottom: 25px;
-    background: #00c0ab;
+    background: $tertiary-color-light;
 
     font-family: $primary-font;
     color: $secondary-color;
