--- a/_sass/_media-assets.scss
+++ b/_sass/_media-assets.scss
@@ -72,7 +72,7 @@
             background-color: $secondary-color-light;
         }
         &.c00C0AB {
-            background-color: #00c0ab;
+            background-color: $tertiary-color-light;
         }
         &.c33DFCC {
             background-color: $tertiary-color;
