--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,9 +1,10 @@
 $primary-color: #000085;
-$secondary-color: #003cda;
-$tertiary-color: #33dfcc;
 
+$secondary-color: #003cda;
 $secondary-color-light: #276bfb;
-$tertiary-bg: #00c0ab;
+
+$tertiary-color: #33dfcc;
+$tertiary-color-light: #00c0ab;
 
 $tertiary-border: #dcebff;
 $white-border: #ffffff;
