--- a/_sass/components/_modal.scss
+++ b/_sass/components/_modal.scss
@@ -50,7 +50,7 @@ body.modal-open {
             color: #fd3a21;
         }
         #mce-success-response{
-            color: #00c0ab;
+            color: $tertiary-color-light;
         }
         form {
             input[type='email'] {
