Delete psevdo elements for integration.svg and fix position of edge

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -160,3 +160,10 @@ a {
     width: 260px;
   }
 }
+.integrations-svg-wrapper{
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  bottom: -5px;
+}
