Fix mobile menu header at mobile height < 580px

--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -87,6 +87,17 @@
                     margin-bottom: 30px;
                 }
             }
+            @media screen and (max-height: 580px) {
+                padding-top: 20px;
+                .menu-list {
+                    flex-direction: column;
+            
+                    li {
+                        margin-bottom: 15px;
+                    }
+                }
+            
+            }
         }
         .social-wrapper {
             display: block;
