--- a/_layouts/media-assets.html
+++ b/_layouts/media-assets.html
@@ -41,27 +41,14 @@
 <body>
 
     {% include header.html %}
-    <main class="blog-post">
+    <main class="page">
         <div class="container container-xl">
             <h1 class="fw-800 fs-46 lh-120 color-black text-center mb-20 mt-70 mt-sm-30 fs-sm-32">{{page.h1title}}</h1>
-            <div class="author-block d-flex j-content-center mb-30">
 
-
-
-            </div>
-            <div class="cover-image mb-60">
-                <img class="lazyload" data-src="{{page.cover}}" alt="">
-            </div>
         </div>
-
-
-
-        <div class="container  container-md post-content">
-
+        <div class="mb-90">
             {{ content }}
-
         </div>
-
         {% include subscription.html content="Subscribe to our newsletter" buttonText="Submit" buttonClass="join-mailing-list" %}
  
         {% include modal.html %}
