fix capitalization at footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <div class="navigation d-flex j-content-sa fw-700 fs-12 lh-120 fs-sm-10 lh-xs-130">
             <div class="network">
                 <ul>
-                    <li>bZx protocol</li>
+                    <li>bZx Protocol</li>
                     <li><a href="/#how-it-works">How it works</a></li>
                     <li><a href="https://docs.bzx.network/">Documentation</a></li>
                     <li><a href="/pdfs/bZx_lite_paper.pdf">Litepaper</a></li>
