--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
                     <li><a href="/#how-it-works">How it works</a></li>
                     <li><a href="https://docs.bzx.network/">Documentation</a></li>
                     <li><a href="/pdfs/bZx_lite_paper.pdf">Litepaper</a></li>
+                    <li><a href="/ecosystem">Ecosystem</a></li>
                     <li><a href="/blog">Blog</a></li>
                 </ul>
             </div>
