Fix position integration.svg

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -93,6 +93,19 @@ a {
     max-width: 400px;
   }
 }
+.integrations-svg-wrapper {
+  position: relative;
+  bottom: -5px;
+}
+@media (min-width: 768px) {
+  .integrations-svg-wrapper {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    bottom: -5px;
+  }
+}
 @media (min-width: 580px) {
   .visible-xs {
     display: none;
@@ -163,13 +176,7 @@ a {
     width: 260px;
   }
 }
-.integrations-svg-wrapper {
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: auto;
-  bottom: -5px;
-}
+
 .long-svg-wrapper {
   @media (min-width: 580px) {
     margin-top: -30px;
