Change height of integration.svg

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -97,8 +97,10 @@ a {
   position: relative;
   bottom: -5px;
   margin-top: -30px;
-  svg {
-    height: auto;
+  @media(max-width: 1439px){
+    svg {
+      height: auto;
+    }
   }
 }
 @media (min-width: 580px) {
