--- a/_sass/components/_carousel.scss
+++ b/_sass/components/_carousel.scss
@@ -26,27 +26,21 @@
     max-width: 445px;
     margin: 0 auto 30px auto;
   }
+  .torque {
+    background-image: url(/images/icons/bg-torque-logo.svg);
+    .item {
+      background-image: url(/images/icons/bg-torque-logo-hover.svg);
+    }
+  }
+  .fulcrum {
+    background-image: url(/images/icons/bg-fulcrum-logo.svg);
+  }
   .item {
     border-top: 2px solid $primary-color;
     color: $primary-color;
     padding: 90px 0 30px 0;
     svg {
       max-height: 64px;
-    }
-    background-position: 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    &.fulcrum {
-      background-image: url(/images/icons/bg-fulcrum-logo.svg);
-      &:hover {
-        background-image: none;
-      }
-    }
-    &.torque {
-      background-image: url(/images/icons/bg-torque-logo.svg);
-      &:hover {
-        background-image: url(/images/icons/bg-torque-logo-hover.svg);
-      }
     }
     &:after {
       content: "";
@@ -88,6 +82,11 @@
     }
   }
   &:hover {
+    cursor: pointer;
+    .torque,
+    .fulcrum {
+      background-image: none;
+    }
     .container-circle {
       .circle {
         &.circle-tertiary {
