--- a/_sass/components/_carousel.scss
+++ b/_sass/components/_carousel.scss
@@ -28,12 +28,15 @@
   }
   .torque {
     background-image: url(/images/icons/bg-torque-logo.svg);
+    background-size: cover;
     .item {
       background-image: url(/images/icons/bg-torque-logo-hover.svg);
+      background-size: cover;
     }
   }
   .fulcrum {
     background-image: url(/images/icons/bg-fulcrum-logo.svg);
+    background-size: cover;
   }
   .item {
     border-top: 2px solid $primary-color;
@@ -41,6 +44,9 @@
     padding: 90px 0 30px 0;
     svg {
       max-height: 64px;
+      @media(max-width: 579px){
+        max-height: 48px;
+      }
     }
     &:after {
       content: "";
