--- a/_sass/_blog-post-content.scss
+++ b/_sass/_blog-post-content.scss
@@ -137,6 +137,7 @@
         line-height: 180%;
         color: $primary-color;
         padding-left: 30px;
+        position: relative;
         @media screen and (max-width: 580px) {
             font-size: 13px;
         }
@@ -146,8 +147,8 @@
             font-weight: bold; /* If you want it to be bold */
             display: inline-block; /* Needed to add space between the bullet and the text */
             width: 1em; /* Also needed for space (tweak if needed) */
-            margin-left: -30px;
-            margin-right: 10px;
+            position: absolute;
+            left: 0;
         }
     }
 
@@ -160,6 +161,7 @@
         line-height: 180%;
         color: $primary-color;
         padding-left: 30px;
+        position: relative;
         @media screen and (max-width: 580px) {
             font-size: 13px;
         }
@@ -169,8 +171,8 @@
             font-weight: bold; /* If you want it to be bold */
             display: inline-block; /* Needed to add space between the bullet and the text */
             width: 1em; /* Also needed for space (tweak if needed) */
-            margin-left: -30px;
-            margin-right: 10px;
+            position: absolute;
+            left: 0;
         }
     }
 
