--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,6 +28,8 @@
     <meta name="twitter:description" content="{{ page.metadescription | strip_html | strip_newlines | truncate: 300 }}">
     <meta name="twitter:image" content="{{ page.featured-image | prepend: site.url }}">
     <link rel="canonical" href="{% if page.canonical %}{{ page.canonical }}{% else %}{{ page.url | prepend: site.url }}{% endif %}" />
+    <link rel="alternate" type="application/atom+xml" title="{{ site.name }}" href="{{ site.baseurl }}/atom.xml" />
+    
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
         <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
