--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -33,7 +33,7 @@
     <meta name="twitter:image" content="{{ page.featured-image | prepend: site.url }}">
 
     <link rel="canonical" href="{% if page.canonical %}{{ page.canonical }}{% else %}{{ page.url | prepend: site.url }}{% endif %}" />
-    <link rel="alternate" type="application/atom+xml" title="{{ site.name }}" href="{{ site.baseurl }}/atom.xml" />
+    <link rel="alternate" type="application/atom+xml" title="{{ site.name }}" href="{{ site.baseurl }}/feed.xml" />
 
     <link href="https://fonts.googleapis.com/css?family=Muli:400,600,700&display=swap" rel="stylesheet">
     <!-- Google Tag Manager -->
